# rtfcre

./: .gitignore  Cargo.toml  README.md
.github/workflows/: cli.yml  tests.yml  wheels.yml
src/: bench.rs  dict.rs  lib.rs  main.rs  python.rs  rtf.rs  test_rtf.rs  test_translation.rs  test_translation_parse.rs  translation.rs  translation_model.rs  translation_parse.rs
