[package]
name = "rtfcre"
version = "2.0.0-dev4"
description = "Python library for Rich Text Format with Court Reporting Extensions (RTF/CRE) dictionaries"
homepage = "https://github.com/sammdot/rtfcre"
authors = ["Sammi De Guzman <sammi@sammdot.ca>"]
edition = "2018"
readme = "README.md"

[package.metadata.maturin]
classifier = ["Programming Language :: Python :: Implementation :: CPython", "Programming Language :: Python :: 3.7", "Programming Language :: Python :: 3.8", "Programming Language :: Python :: 3.9"]

[lib]
name = "rtfcre"
crate_type = ["cdylib"]

[dependencies]
encoding_rs = "0.8.28"
linked-hash-map = "0.5.3"
lazy_static = "1.4.0"
regex = "1.4.2"
nom = "6"
pyo3-file = "0.3.3"
structopt = "0.3.13"
termcolor = "1.1.2"

[dependencies.serde_json]
version = "1.0"
features = ["preserve_order"]

[dependencies.pyo3]
version = "0.12.4"

[dev-dependencies]
criterion = "0.3.3"
rand = "0.8.0"

[[bench]]
name = "bench"
path = "src/bench.rs"
harness = false

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
